# gconv

./: .gitignore  README.md  pyproject.toml
gconv/: utils.py
gconv/gnn/functional/: grid.py
gconv/gnn/kernels/: __init__.py  kernel.py
gconv/gnn/kernels/kernel_sen/: __init__.py  kernel_se2.py  kernel_se3.py
gconv/gnn/modules/: gconv.py
gconv/gnn/modules/gconv_sen/: __init__.py  gconv_se2.py  gconv_se3.py
tests/: test_equivariance.py  test_gconv_e2.py  test_gconv_e3.py  test_gconv_se2.py  test_gconv_se3.py  test_group_o2.py  test_group_o3.py  test_group_so2.py  test_kernel_e2.py  test_kernel_e3.py  test_kernel_se2.py  test_kernel_se3.py  test_rlkernel.py
