
[tool.poetry]
name = "gconv-tpk"
version = "0.0.3"
description = "Pytorch extension for continuous regular group convolutions"
authors = ["Thijs Kuipers <kuipersthijs@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [ {include = "gconv"} ] 

[tool.poetry.urls]
"Homepage" = "https://github.com/ThijsKuipers1995/gconv"
"Bug Tracker" = "https://github.com/ThijsKuipers1995/gconv/issues"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"
black = "^24.4.2"
pytest = "^8.2.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
